8/31/2012
	- Add support for the TLSA record type.
	- Pass hostnames to InetAddress.getByAddress where possible.
	  (patch from Ingo Bauersachs <ingo.bauersachs@fhnw.ch>)

11/15/2011
	- Fix the ZoneTransferIn object to properly report AXFRs; this was
	  broken by the changes in 2.1.3.
	  (reported by Thomas Corte <Thomas.Corte@knipp.de>)

11/3/2011
	- Update DSRecord constructor from DNSKEYRecord to generate the
	  correct digest.
	  (patch from Marty Kube <marty@beavercreekconsulting.com>)

	- Also update the signature of the DSRecord constructor from
	  DNSKEYRecord to not take the key's footprint as a parameter, as it
	  can be derived from the key.

10/24/2011
	- 2.1.3 released

10/17/2011
	- Add a callback interface to ZoneTransferIn.
	  (based on a patch from Nick Sayer <nsayer@silverspringnet.com>)

10/10/2011
	- An exception could be thrown when attempting to look up data in the
	  cache for type ANY when there were only previously cached
	  NOERROR/NODATA responses for that name.
	  (reported by Niel de Wet <nieldw@gmail.com>)

7/24/2011
	- 2.1.2 released

6/9/2011
	- TypeBitmap.toString() failed if no bits were set.
	  (patch from Jeffrey Damick <Jeffrey.Damick@neustar.biz>)

5/24/2011
	- TSIG.fromString() didn't handle base64-encoded secrets with /
	  characters. (reported by Sten <stennordstrom@users.sourceforge.net>)

5/12/2011
	- Support verifying truncated TSIG signatures, as specified in RFC
	  4635.

5/10/2011
	- Refactor EDNS Option support to allow for custom type
	  implementations, and add support for the Client Subnet option.
	  (based on a patch from Ming Zhou <mizhou@bnivideo.com>)

	- Add support for the NSID EDNS option.

4/20/2011
	- Add missing support for the HMAC-SHA224, HMA-SHA384, and HMAC-SHA384
	  TSIG algorithms. (patch from Thomas Corte <Thomas.Corte@knipp.de>)

3/9/2011
	- Add support for using alternate JCA providers when generating DNSSEC
	  signatures (patch from Jeffrey Damick <Jeffrey.Damick@neustar.biz>)

2/9/2011